--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <thead>
         <tr>
           <th>Время</th>
-          <th>Человек 1</th>
-          <th>Человек 2</th>
+          <th>ОЦХ - 1</th>
+          <th>ОЦХ - 2</th>
         </tr>
       </thead>
       <tbody>
